@@ -54,6 +54,16 @@
 #	define OPENZWAVE_EXPORT_WARNINGS_ON
 #endif
 
+#ifdef __GNUC__
+#define DEPRECATED __attribute__((deprecated))
+#elif defined(_MSC_VER)
+#define DEPRECATED __declspec(deprecated)
+#else
+#pragma message("WARNING: You need to implement DEPRECATED for this compiler")
+#define DEPRECATED
+#endif
+
+
 #ifdef NULL
 #undef NULL
 #endif
