@@ -1626,9 +1626,12 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * - Driver::ControllerState_InProgress - the controller is in the process of adding or removing the chosen node.  It is now too late to cancel the command.
 		 * - Driver::ControllerState_Complete - the controller has finished adding or removing the node, and the command is complete.
 		 * - Driver::ControllerState_Failed - will be sent if the command fails for any reason.
-		 * \see AddNode RemoveNode RemoveFailedNode HasNodeFailed RequestNodeNeighborUpdate AssignReturnRoute DeleteAllReturnRoutes SendNodeInformation
+		 * \deprecated This method has been depreciated in favour of the methods in the \ref Network_Commands section
+		 *
+		 * \see AddNode RemoveNode RemoveFailedNode HasNodeFailed RequestNodeNeighborUpdate AssignReturnRoute DeleteAllReturnRoutes SendNodeInformation CreateNewPrimary ReceiveConfiguration ReplaceFailedNode TransferPrimaryRole RequestNetworkUpdate ReplicationSend CreateButton DeleteButton
+		 *
 		 */
-		bool BeginControllerCommand( uint32 const _homeId, Driver::ControllerCommand _command, Driver::pfnControllerCallback_t _callback = NULL, void* _context = NULL, bool _highPower = false, uint8 _nodeId = 0xff, uint8 _arg = 0 );
+		DEPRECATED bool BeginControllerCommand( uint32 const _homeId, Driver::ControllerCommand _command, Driver::pfnControllerCallback_t _callback = NULL, void* _context = NULL, bool _highPower = false, uint8 _nodeId = 0xff, uint8 _arg = 0 );
 
 		/**
 		 * \brief Cancels any in-progress command running on a controller.
@@ -1695,6 +1698,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The Home ID of the Z-Wave network where the device should be added.
 		 * \param _doSecurity Whether to initialize the Network Key on the device if it supports the Security CC
 		 * \return if the Command was sent succcesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool AddNode( uint32 const _homeId, bool _doSecurity = true );
 
@@ -1708,6 +1712,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 *
 		 * \param _homeId The HomeID of the Z-Wave network where you want to remove the device
 		 * \return if the Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool RemoveNode(uint32 const _homeId);
 
@@ -1725,6 +1730,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network where you want to remove the device
 		 * \param _nodeId The NodeID of the Failed Node.
 		 * \return if the Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool RemoveFailedNode(uint32 const _homeId, uint8 const _nodeId);
 
@@ -1740,6 +1746,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network where you want to test the device
 		 * \param _nodeId The NodeID of the Failed Node.
 		 * \return if the RemoveDevice Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool HasNodeFailed(uint32 const _homeId, uint8 const _nodeId);
 
@@ -1753,6 +1760,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network where you want to update the device
 		 * \param _nodeId The NodeID of the Node.
 		 * \return if the Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool RequestNodeNeighborUpdate(uint32 const _homeId, uint8 const _nodeId);
 
@@ -1766,6 +1774,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network where you want to update the device
 		 * \param _nodeId The NodeID of the Node.
 		 * \return if the Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool AssignReturnRoute(uint32 const _homeId, uint8 const _nodeId);
 
@@ -1779,6 +1788,7 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network where you want to update the device
 		 * \param _nodeId The NodeID of the Node.
 		 * \return if the Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool DeleteAllReturnRoutes(uint32 const _homeId, uint8 const _nodeId);
 
@@ -1792,9 +1802,122 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * \param _homeId The HomeID of the Z-Wave network
 		 * \param _nodeId The NodeID of the Node to recieve the NIF
 		 * \return if the sendNIF Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
 		 */
 		bool SendNodeInformation(uint32 const _homeId, uint8 const _nodeId);
 
+		/**
+		 * \brief Create a new primary controller when old primary fails. Requires SUC.
+		 * This command Creates a new Primary Controller when the Old Primary has Failed. Requires a SUC on the network to function
+		 *
+		 * Results of the CreateNewPrimary Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \return if the CreateNewPrimary Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool CreateNewPrimary(uint32 const _homeId);
+
+		/**
+		 * \brief Receive network configuration information from primary controller. Requires secondary.
+		 * This command prepares the controller to recieve Network Configuration from a Secondary Controller.
+		 *
+		 * Results of the ReceiveConfiguration Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \return if the ReceiveConfiguration Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool ReceiveConfiguration (uint32 const _homeId);
+
+		/**
+		 * \brief Replace a failed device with another.
+		 * If the node is not in the controller's failed nodes list, or the node responds, this command will fail.
+		 * You can check if a Node is in the Controllers Failed node list by using the HasNodeFailed method
+		 *
+		 * Results of the ReplaceFailedNode Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \param _nodeId the ID of the Failed Node
+		 * \return if the ReplaceFailedNode Command was send succesfully to the Controller
+		 * \sa HasNodeFailed
+		 * \sa CancelControllerCommand
+		 */
+		bool ReplaceFailedNode(uint32 const _homeId, uint8 const _nodeId);
+
+		/**
+		 * \brief Add a new controller to the network and make it the primary.
+		 * The existing primary will become a secondary controller.
+		 *
+		 * Results of the TransferPrimaryRole Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \return if the TransferPrimaryRole Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool TransferPrimaryRole(uint32 const _homeId);
+
+		/**
+		 * \brief Update the controller with network information from the SUC/SIS.
+		 *
+		 * Results of the RequestNetworkUpdate Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \param _nodeId the ID of the Node
+		 * \return if the RequestNetworkUpdate Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool RequestNetworkUpdate(uint32 const _homeId, uint8 const _nodeId);
+
+		/**
+		 * \brief Send information from primary to secondary
+		 *
+		 * Results of the ReplicationSend Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \param _nodeId the ID of the Node
+		 * \return if the ReplicationSend Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool ReplicationSend(uint32 const _homeId, uint8 const _nodeId);
+
+		/**
+		 * \brief Create a handheld button id.
+		 *
+		 * Only intended for Bridge Firmware Controllers.
+		 *
+		 * Results of the CreateButton Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \param _nodeId the ID of the Virtual Node
+		 * \param _buttonId the ID of the Button to create
+		 * \return if the CreateButton Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool CreateButton(uint32 const _homeId, uint8 const _nodeId, uint8 const _buttonid);
+
+		/**
+		 * \brief Dekete a handheld button id.
+		 *
+		 * Only intended for Bridge Firmware Controllers.
+		 *
+		 * Results of the DeleteButton Command will be send as a Notification with the Notification type as
+		 * Notification::Type_ControllerCommand
+		 *
+		 * \param _homeId The HomeID of the Z-Wave network
+		 * \param _nodeId the ID of the Virtual Node
+		 * \param _buttonId the ID of the Button to delete
+		 * \return if the DeleteButton Command was send succesfully to the Controller
+		 * \sa CancelControllerCommand
+		 */
+		bool DeleteButton(uint32 const _homeId, uint8 const _nodeId, uint8 const _buttonid);
 
 	/*@}*/
 
